--- a/style.css
+++ b/style.css
@@ -400,16 +400,15 @@ nav .fas{
 }
 
 @media only screen and (max-width: 600px) {
-  #header{
-    /* background-image: url(images/phone-background.png); */
-  }
+
   .header-text  {
-    /* margin-top: 100%; */
+    margin-top: 50%;
     font-size: 16px;
   }
 
   .header-text h1 {
-    font-size: 100px;
+    font-size: 120px;
+    margin-right: 50;
   }
 
   nav .fas {
@@ -422,12 +421,13 @@ nav .fas{
     position: fixed;
     top: 0;
     right: -200px;
-    width: 200px;
+    width: 100px;
     height: 100vh;
     padding-top: 50px;
     z-index: 2;
     transition: right 0.5s;
   }
+
 
   nav l li  {
     display: block;
@@ -476,4 +476,103 @@ nav .fas{
   margin-top: -40px;
   display: block;
 }
+
+@media only screen and (max-width: 390px) {
+
+  .header-text  {
+    margin-top: 20%;
+    margin-left: 10%;
+    font-size: 26px;
+  }
+
+  .header-text h1 {
+    font-size: 90px;
+    margin-right: 100%;
+  }
+
+  .header-text h2 {
+    margin-left: 2%;
+  }
+
+  .header-text h3 {
+    margin-left: 2%;
+  }
+
+  nav .fas {
+    display: block;
+    font-size: 25px;
+  }
+
+  nav ul {
+    background: #ababab;
+    position: fixed;
+    top: 0;
+    right: -200px;
+    width: 100px;
+    height: 100vh;
+    padding-top: 50px;
+    z-index: 2;
+    transition: right 0.5s;
+  }
+
+
+  nav l li  {
+    display: block;
+    margin: 25px;
+  }
+
+  nav ul .fas {
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    cursor: pointer;
+  }
+
+  .sub-title {
+    font-size: 40px;
+  }
+
+  .about-col-1, .about-col-2{
+    flex-basis: 500px;
+  }
+
+  .about-col-1{
+    margin-bottom: 30px;
+    margin-right: 50px;
+  }
+
+  .about-col-1 img {
+    visibility: hidden;
+  }
+
+  .about-col-2{
+    font-size: 17px;
+    font-weight: 500;
+
+  }
+
+  .tab-links{
+    font-size: 50px;
+    margin-right: 20px;
+  }
+
+  .services-list div {
+    background: var(--primary-color);
+    padding: 40px;
+    font-size: 17px;
+    font-weight: 300;
+    color: var(--secondary-color);
+    border-radius: 10px;
+    transition: background 0.5s, transform 0.5s; 
+  }
+
+  .contact-left, .contact-right{
+    flex-basis: 100%;
+  }
+
+  .copyright {
+    font-size: 14px;
+  }
+}
+
 
